Add metadataName override for all resources
Allow specifying metadataName for queues, exchanges, bindings,
  policies, users, permissions, and vhosts
Preserves existing Kubernetes metadata.name when provided
Updated examples and values with documentation for this option

--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -162,15 +162,21 @@ rabbitmq-topology:
         applyTo: ""
 
       # -- Map of queue definitions.
+      # Per entry you can set `metadataName` to override Kubernetes `metadata.name`.
       queues: {}
       # -- Map of exchange definitions.
+      # Per entry you can set `metadataName` to override Kubernetes `metadata.name`.
       exchanges: {}
       # -- Map of binding definitions.
+      # Per entry you can set `metadataName` to override Kubernetes `metadata.name`.
       bindings: {}
       # -- Map of policy definitions.
+      # Per entry you can set `metadataName` to override Kubernetes `metadata.name`.
       policies: {}
       # -- Map of user definitions.
+      # Per entry you can set `metadataName` for User and `permission.metadataName` for Permission.
       users: {}
 
     # -- Map of vhost definitions.
+    # Per entry you can set `metadataName` to override Kubernetes `metadata.name`.
     vhosts: {}
