--- a/charts/rabbitmq-topology/templates/users.yaml
+++ b/charts/rabbitmq-topology/templates/users.yaml
@@ -4,13 +4,14 @@
 {{- range $name, $user := .Values.rabbitmq.topology.users }}
 {{- if ($user.enabled | default true) }}
 {{- $userName := $user.name | default $name }}
+{{- $userMetadataName := $user.metadataName | default (printf "%s-%s" $clusterRef $userName | include "com.klicktipp.slugify-string") }}
 {{- $tags := $user.tags | default (list) }}
 {{- $secretName := $user.existingSecret | default (printf "%s-%s" $clusterRef $userName | include "com.klicktipp.slugify-string") }}
 ---
 apiVersion: rabbitmq.com/v1beta1
 kind: User
 metadata:
-  name: {{ printf "%s-%s" $clusterRef $userName | include "com.klicktipp.slugify-string" | quote }}
+  name: {{ $userMetadataName | quote }}
   annotations:
     checksum/user: {{ $user.existingSecret | default (printf "%s-%s" $userName $user.password) | sha256sum }}
 spec:
@@ -39,15 +40,16 @@ stringData:
 {{- if $permission.enabled | default true }}
 {{- $vhost := coalesce $user.vhost $permission.vhost $defaultVhost }}
 {{- $permissionName := $permission.name | default (printf "%s-%s" $clusterRef $userName) | include "com.klicktipp.slugify-string" }}
+{{- $permissionMetadataName := $permission.metadataName | default $permissionName }}
 ---
 apiVersion: rabbitmq.com/v1beta1
 kind: Permission
 metadata:
-  name: {{ $permissionName | quote }}
+  name: {{ $permissionMetadataName | quote }}
 spec:
   vhost: {{ $vhost | quote }}
   userReference:
-    name: {{ printf "%s-%s" $clusterRef $userName | include "com.klicktipp.slugify-string" | quote }}
+    name: {{ $userMetadataName | quote }}
   permissions:
     write: {{ $permission.write | default ".*" | quote }}
     configure: {{ $permission.configure | default ".*" | quote }}
