--- a/charts/rabbitmq-topology/templates/vhost.yaml
+++ b/charts/rabbitmq-topology/templates/vhost.yaml
@@ -2,11 +2,12 @@
 {{- range $key, $vhost := .Values.rabbitmq.vhosts }}
 {{- if (hasKey $vhost "enabled" | ternary $vhost.enabled true) }}
 {{- $vhostName := $vhost.name | default $key }}
+{{- $vhostMetadataName := $vhost.metadataName | default ((printf "%s-%s" $clusterRef $vhostName) | include "com.klicktipp.slugify-string") }}
 ---
 apiVersion: rabbitmq.com/v1beta1
 kind: Vhost
 metadata:
-  name: {{ (printf "%s-%s" $clusterRef $vhostName) | include "com.klicktipp.slugify-string" | quote }}
+  name: {{ $vhostMetadataName | quote }}
   labels:
     {{- include "rabbitmq-topology.labels" $ | nindent 4 }}
 spec:
