--- a/charts/rabbitmq-cluster/Chart.yaml
+++ b/charts/rabbitmq-cluster/Chart.yaml
@@ -4,8 +4,8 @@ name: rabbitmq-cluster
 description: Helm chart to define a RabbitMQ cluster via official rabbitmq.com CRDs (RabbitmqCluster).
 type: application
 version: "0.1.0"
+# renovate: datasource=docker depName=rabbitmqoperator/cluster-operator
 appVersion: "2.19.0"
-kubeVersion: ">= 1.33.0-0"
 home: https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
 sources:
   - https://github.com/klicktipp/helm-charts
