--- a/charts/rabbitmq-topology/Chart.yaml
+++ b/charts/rabbitmq-topology/Chart.yaml
@@ -4,8 +4,8 @@ name: rabbitmq-topology
 description: Helm chart to manage RabbitMQ topology resources via RabbitMQ Topology Operator CRDs.
 type: application
 version: "0.1.0"
+# renovate: datasource=docker depName=rabbitmqoperator/messaging-topology-operator
 appVersion: "1.18.2"
-kubeVersion: ">= 1.33.0-0"
 home: https://www.rabbitmq.com/kubernetes/operator/using-topology-operator
 sources:
   - https://github.com/klicktipp/helm-charts
