Use Prefix pathType for Ingress hosts
Changed default pathType from ImplementationSpecific to Prefix
Updated README and values.yaml to reflect new default

--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -30,7 +30,7 @@ ingress:
     - host: chart-example.local
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   # -- TLS configuration entries for Ingress.
   tls: []
 
