--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,9 @@
   "extends": [
     "config:best-practices"
   ],
+  "ignorePresets": [
+    ":pinDevDependencies"
+  ],
   "packageRules": [
     {
       "changelogUrl": "https://github.com/n8n-io/n8n",
