--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "config:best-practices"
   ],
   "ignorePresets": [
+    "docker:pinDigests",
     ":pinDevDependencies"
   ],
   "packageRules": [
