--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,8 @@
   ],
   "ignorePresets": [
     "docker:pinDigests",
-    ":pinDevDependencies"
+    ":pinDevDependencies",
+    "helpers:pinGitHubActionDigests"
   ],
   "packageRules": [
     {
