--- a/.github/workflows/update-chart-readmes.yml
+++ b/.github/workflows/update-chart-readmes.yml
@@ -28,7 +28,7 @@ jobs:
         run: scripts/generate-chart-readmes.sh
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0 # v8
+        uses: peter-evans/create-pull-request@v6
         with:
           commit-message: "docs(charts): regenerate chart READMEs"
           title: "docs(charts): regenerate chart READMEs"
