--- a/charts/rabbitmq-cluster/Chart.yaml
+++ b/charts/rabbitmq-cluster/Chart.yaml
@@ -7,6 +7,7 @@ version: "0.1.0"
 # renovate: datasource=docker depName=rabbitmqoperator/cluster-operator
 appVersion: "2.19.0"
 home: https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
+icon: https://avatars.githubusercontent.com/u/96669?s=200&v=4
 sources:
   - https://github.com/klicktipp/helm-charts
   - https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
