--- a/charts/rabbitmq-topology/Chart.yaml
+++ b/charts/rabbitmq-topology/Chart.yaml
@@ -7,6 +7,7 @@ version: "0.1.0"
 # renovate: datasource=docker depName=rabbitmqoperator/messaging-topology-operator
 appVersion: "1.18.2"
 home: https://www.rabbitmq.com/kubernetes/operator/using-topology-operator
+icon: https://avatars.githubusercontent.com/u/96669?s=200&v=4
 sources:
   - https://github.com/klicktipp/helm-charts
   - https://www.rabbitmq.com/kubernetes/operator/using-topology-operator
