--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,12 +83,49 @@ jobs:
 
           helm repo update
 
+      - name: Prepare intelligent release notes
+        if: steps.version_bump.outputs.has_bump == 'true'
+        id: notes
+        run: |
+          set -euo pipefail
+          scripts/prepare-release-notes.sh "${{ github.event.before }}" "${{ github.sha }}"
+
       - name: Run chart-releaser
         if: steps.version_bump.outputs.has_bump == 'true'
         uses: helm/chart-releaser-action@v1.7.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: "true"
+
+      - name: Enrich GitHub Releases with intelligent changelog
+        if: steps.version_bump.outputs.has_bump == 'true'
+        env:
+          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        run: |
+          set -euo pipefail
+
+          if [ ! -d ".release-notes" ]; then
+            echo "No release note directory found. Skipping."
+            exit 0
+          fi
+
+          shopt -s nullglob
+          note_files=(.release-notes/*.md)
+
+          if [ "${#note_files[@]}" -eq 0 ]; then
+            echo "No release note files found. Skipping."
+            exit 0
+          fi
+
+          for file in "${note_files[@]}"; do
+            tag="$(basename "${file}" .md)"
+            if gh release view "${tag}" >/dev/null 2>&1; then
+              echo "Updating release notes for ${tag}"
+              gh release edit "${tag}" --notes-file "${file}"
+            else
+              echo "Release ${tag} does not exist yet. Skipping."
+            fi
+          done
 
       - name: Skip release (no chart version bump)
         if: steps.version_bump.outputs.has_bump != 'true'
