--- a/charts/zalando-postgres-cluster/templates/secrets.yaml
+++ b/charts/zalando-postgres-cluster/templates/secrets.yaml
@@ -8,9 +8,9 @@ metadata:
 type: Opaque
 stringData:
   {{- if .Values.postgres_cluster.wal.accessKeyId }}
-  aws_access_key_id: {{ .Values.postgres_cluster.wal.accessKeyId | quote }}
+  AWS_ACCESS_KEY_ID: {{ .Values.postgres_cluster.wal.accessKeyId | quote }}
   {{- end }}
   {{- if .Values.postgres_cluster.wal.secretAccessKey }}
-  aws_secret_access_key: {{ .Values.postgres_cluster.wal.secretAccessKey | quote }}
+  AWS_SECRET_ACCESS_KEY: {{ .Values.postgres_cluster.wal.secretAccessKey | quote }}
   {{- end }}
 {{- end -}}
