--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,6 +83,29 @@ jobs:
 
           helm repo update
 
+      - name: Collect released chart tags
+        if: steps.version_bump.outputs.has_bump == 'true'
+        run: |
+          set -euo pipefail
+
+          BEFORE_SHA="${{ github.event.before }}"
+          AFTER_SHA="${{ github.sha }}"
+          : > .release-tags.txt
+
+          mapfile -t changed_chart_files < <(
+            git diff --name-only "${BEFORE_SHA}" "${AFTER_SHA}" -- 'charts/*/Chart.yaml' || true
+          )
+
+          for file in "${changed_chart_files[@]}"; do
+            old_version="$(git show "${BEFORE_SHA}:${file}" 2>/dev/null | awk -F': *' '$1 == "version" { print $2; exit }' | tr -d '"' | tr -d "'" | xargs || true)"
+            new_version="$(awk -F': *' '$1 == "version" { print $2; exit }' "${file}" | tr -d '"' | tr -d "'" | xargs || true)"
+
+            if [ -n "${new_version}" ] && [ "${new_version}" != "${old_version}" ]; then
+              chart_name="$(basename "$(dirname "${file}")")"
+              echo "${chart_name}-${new_version}" >> .release-tags.txt
+            fi
+          done
+
       - name: Run chart-releaser
         if: steps.version_bump.outputs.has_bump == 'true'
         uses: helm/chart-releaser-action@v1.7.0
@@ -90,6 +113,63 @@ jobs:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: "true"
           CR_GENERATE_RELEASE_NOTES: "true"
+
+      - name: Ensure GitHub auto-generated release notes
+        if: steps.version_bump.outputs.has_bump == 'true'
+        env:
+          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        run: |
+          set -euo pipefail
+
+          if [ ! -f ".release-tags.txt" ]; then
+            echo "No release tags file found. Skipping."
+            exit 0
+          fi
+
+          mapfile -t tags < .release-tags.txt
+          if [ "${#tags[@]}" -eq 0 ]; then
+            echo "No release tags queued. Skipping."
+            exit 0
+          fi
+
+          for tag in "${tags[@]}"; do
+            [ -z "${tag}" ] && continue
+            chart_name="${tag%-*}"
+            previous_tag="$(
+              git tag --list "${chart_name}-*" --sort=-v:refname \
+                | grep -v "^${tag}$" \
+                | head -n 1 || true
+            )"
+
+            if ! gh release view "${tag}" >/dev/null 2>&1; then
+              echo "Release ${tag} does not exist yet. Skipping."
+              continue
+            fi
+
+            notes_file="$(mktemp)"
+            if [ -n "${previous_tag}" ]; then
+              gh api \
+                -X POST \
+                "repos/${GITHUB_REPOSITORY}/releases/generate-notes" \
+                -f "tag_name=${tag}" \
+                -f "previous_tag_name=${previous_tag}" \
+                --jq '.body' > "${notes_file}"
+            else
+              gh api \
+                -X POST \
+                "repos/${GITHUB_REPOSITORY}/releases/generate-notes" \
+                -f "tag_name=${tag}" \
+                --jq '.body' > "${notes_file}"
+            fi
+
+            if [ -s "${notes_file}" ]; then
+              gh release edit "${tag}" --notes-file "${notes_file}"
+              echo "Updated release notes for ${tag}."
+            else
+              echo "Generated notes are empty for ${tag}. Skipping update."
+            fi
+            rm -f "${notes_file}"
+          done
 
       - name: Skip release (no chart version bump)
         if: steps.version_bump.outputs.has_bump != 'true'
