Add userFolder support to deployments
Introduce N8N_USER_FOLDER env var for all components
Configurable per main, worker, webhook, and MCP webhook
Adjust volume mounts to use userFolder paths
Update worker image default to n8nio/runners
Bump chart version to 1.2.3

--- a/charts/n8n/templates/deployment.webhook.mcp.yaml
+++ b/charts/n8n/templates/deployment.webhook.mcp.yaml
@@ -139,10 +139,13 @@ spec:
                 name: {{ tpl ($name | toString) $ }}
             {{- end }}
           {{- end }}
+          {{- $mcpUserFolder := coalesce .Values.webhook.mcp.userFolder .Values.webhook.userFolder "/home/node" }}
           {{- $baseExtraEnv := include "n8n.renderMergedExtraEnv" (dict "global" .Values.global.extraEnv "component" .Values.webhook.extraEnv "context" $) | fromYamlArray }}
           {{- $mergedExtraEnv := include "n8n.renderMergedExtraEnv" (dict "global" $baseExtraEnv "component" .Values.webhook.mcp.extraEnv "context" $) }}
-          {{- if $mergedExtraEnv }}
+          {{- if or $mcpUserFolder $mergedExtraEnv }}
           env:
+            - name: N8N_USER_FOLDER
+              value: {{ $mcpUserFolder | quote }}
             {{- $mergedExtraEnv | nindent 12 }}
           {{- end }}
           lifecycle:
@@ -153,7 +156,7 @@ spec:
             {{- toYaml (coalesce .Values.webhook.mcp.resources .Values.webhook.resources .Values.global.resources (dict)) | nindent 12 }}
           volumeMounts:
             - name: data
-              mountPath: /home/node/.n8n
+              mountPath: {{ $mcpUserFolder | quote }}
           {{- with .Values.webhook.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
