--- a/charts/n8n/templates/deployment.worker.yaml
+++ b/charts/n8n/templates/deployment.worker.yaml
@@ -104,9 +104,12 @@ spec:
                 name: {{ tpl ($name | toString) $ }}
             {{- end }}
           {{- end }}
+          {{- $workerUserFolder := default "/home/runner" .Values.worker.userFolder }}
           {{- $mergedExtraEnv := include "n8n.renderMergedExtraEnv" (dict "global" .Values.global.extraEnv "component" .Values.worker.extraEnv "context" $) }}
-          {{- if $mergedExtraEnv }}
+          {{- if or $workerUserFolder $mergedExtraEnv }}
           env:
+            - name: N8N_USER_FOLDER
+              value: {{ $workerUserFolder | quote }}
             {{- $mergedExtraEnv | nindent 12 }}
           {{- end }}
           {{- if .Values.worker.command }}
@@ -139,7 +142,7 @@ spec:
             {{- toYaml (coalesce .Values.worker.resources .Values.global.resources (dict)) | nindent 12 }}
           volumeMounts:
             - name: data
-              mountPath: /home/node/.n8n
+              mountPath: {{ $workerUserFolder | quote }}
           {{- if .Values.worker.extraVolumeMounts }}
             {{- toYaml .Values.worker.extraVolumeMounts | nindent 12 }}
           {{- end }}
