--- a/charts/n8n/templates/deployment.worker.yaml
+++ b/charts/n8n/templates/deployment.worker.yaml
@@ -69,6 +69,14 @@ spec:
       initContainers:
       {{ tpl (toYaml $mergedInitContainers) . | nindent 8 }}
       {{- end }}
+      {{- $workerRunnerEnabled := .Values.runners.enabled }}
+      {{- if hasKey (default (dict) .Values.worker.runner) "enabled" }}
+      {{- $workerRunnerEnabled = .Values.worker.runner.enabled }}
+      {{- end }}
+      {{- $workerRunnerMode := coalesce .Values.worker.runner.mode .Values.runners.mode "external" }}
+      {{- $workerRunnerPort := coalesce .Values.worker.runner.port .Values.runners.port 5679 }}
+      {{- $workerRunnerListenAddress := coalesce .Values.worker.runner.brokerListenAddress .Values.runners.brokerListenAddress "0.0.0.0" }}
+      {{- $workerRunnerBrokerURI := coalesce .Values.worker.runner.brokerUri (printf "ws://127.0.0.1:%v" $workerRunnerPort) }}
       containers:
         - name: {{ .Chart.Name }}-worker
           securityContext:
@@ -110,6 +118,18 @@ spec:
           env:
             - name: N8N_USER_FOLDER
               value: {{ $workerUserFolder | quote }}
+            {{- if $workerRunnerEnabled }}
+            - name: N8N_RUNNERS_ENABLED
+              value: "true"
+            - name: N8N_RUNNERS_MODE
+              value: {{ $workerRunnerMode | quote }}
+            - name: N8N_RUNNERS_TASK_BROKER_LISTEN_ADDRESS
+              value: {{ $workerRunnerListenAddress | quote }}
+            - name: N8N_RUNNERS_TASK_BROKER_PORT
+              value: {{ $workerRunnerPort | toString | quote }}
+            - name: N8N_RUNNERS_AUTH_TOKEN
+              value: {{ required "worker.runner is enabled but no auth token is set. Set worker.runner.authToken or runners.authToken." (coalesce .Values.worker.runner.authToken .Values.runners.authToken) | quote }}
+            {{- end }}
             {{- $mergedExtraEnv | nindent 12 }}
           {{- end }}
           {{- if .Values.worker.command }}
@@ -130,6 +150,11 @@ spec:
             - name: http
               containerPort: {{ get (default (dict) .Values.worker.config.n8n) "port" | default 5678 }}
               protocol: TCP
+            {{- if $workerRunnerEnabled }}
+            - name: task-broker
+              containerPort: {{ $workerRunnerPort }}
+              protocol: TCP
+            {{- end }}
           {{- with .Values.worker.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -146,6 +171,30 @@ spec:
           {{- if .Values.worker.extraVolumeMounts }}
             {{- toYaml .Values.worker.extraVolumeMounts | nindent 12 }}
           {{- end }}
+        {{- if $workerRunnerEnabled }}
+        - name: {{ .Chart.Name }}-worker-runner
+          securityContext:
+            {{- toYaml (mergeOverwrite (deepCopy (default (dict) .Values.runners.securityContext)) (default (dict) .Values.worker.runner.securityContext)) | nindent 12 }}
+          image: "{{ include "n8n.runnerImage" (dict "context" . "componentRunner" .Values.worker.runner) }}"
+          imagePullPolicy: {{ include "n8n.runnerImagePullPolicy" (dict "context" . "componentRunner" .Values.worker.runner) }}
+          {{- with .Values.worker.runner.command }}
+          command:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.worker.runner.args }}
+          args:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- $runnerExtraEnv := include "n8n.renderMergedExtraEnv" (dict "global" .Values.runners.extraEnv "component" .Values.worker.runner.extraEnv "context" $) }}
+          env:
+            - name: N8N_RUNNERS_TASK_BROKER_URI
+              value: {{ $workerRunnerBrokerURI | quote }}
+            - name: N8N_RUNNERS_AUTH_TOKEN
+              value: {{ required "worker.runner is enabled but no auth token is set. Set worker.runner.authToken or runners.authToken." (coalesce .Values.worker.runner.authToken .Values.runners.authToken) | quote }}
+            {{- $runnerExtraEnv | nindent 12 }}
+          resources:
+            {{- toYaml (coalesce .Values.worker.runner.resources .Values.runners.resources (dict)) | nindent 12 }}
+        {{- end }}
       {{- with .Values.hostAliases }}
       hostAliases:
         {{- toYaml . | nindent 8 }}
